--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "momentjs": "2.5.1",
     "socket.io-client": "0.9.16",
     "amanda": "0.4.7",
+    "catiline": "2.9.3",
     "paths-js": "0.1.6"
   }
 }
