--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-open": "~0.2.3",
+    "load-grunt-config": "~0.7.1",
     "connect-livereload": "~0.3.2"
   },
   "engines": {
